[gd_scene load_steps=16 format=3 uid="uid://b6vnl073pnt1k"]

[ext_resource type="Script" path="res://Scripts/soda_machine/button for machine soda.gd" id="1_snenu"]
[ext_resource type="Script" path="res://Scripts/soda_machine/soda_bar.gd" id="2_0fucr"]
[ext_resource type="Script" path="res://Scripts/soda_machine/Soda.gd" id="2_2xyqp"]
[ext_resource type="Script" path="res://Scripts/soda_machine/Water.gd" id="4_p7xw8"]

[sub_resource type="BoxMesh" id="BoxMesh_ui0ip"]

[sub_resource type="Gradient" id="Gradient_umcrc"]
offsets = PackedFloat32Array(0.00717703)
colors = PackedColorArray(0.18359, 0.18359, 0.18359, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a7vot"]
gradient = SubResource("Gradient_umcrc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnuhr"]
size = Vector2(85.5, 112.5)

[sub_resource type="BoxMesh" id="BoxMesh_7iehw"]

[sub_resource type="Gradient" id="Gradient_ploa3"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.419608, 0.72549, 0.862745, 0.0470588)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_clxe0"]
gradient = SubResource("Gradient_ploa3")

[sub_resource type="CircleShape2D" id="CircleShape2D_t8crv"]
radius = 24.6982

[sub_resource type="BoxMesh" id="BoxMesh_0l0m4"]

[sub_resource type="Gradient" id="Gradient_doiv2"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8k41s"]
gradient = SubResource("Gradient_doiv2")

[node name="pop_machine" type="Node2D"]

[node name="MeshInstance2D2" type="MeshInstance2D" parent="."]
position = Vector2(549, 141)
scale = Vector2(132, 292)
mesh = SubResource("BoxMesh_ui0ip")
texture = SubResource("GradientTexture2D_a7vot")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
position = Vector2(399, 141.75)
scale = Vector2(132, 295.5)
mesh = SubResource("BoxMesh_ui0ip")
texture = SubResource("GradientTexture2D_a7vot")

[node name="cup" type="Area2D" parent="."]
position = Vector2(72, 614)
script = ExtResource("1_snenu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="cup"]
position = Vector2(6.25, -1)
shape = SubResource("RectangleShape2D_qnuhr")

[node name="cup" type="MeshInstance2D" parent="cup/CollisionShape2D"]
position = Vector2(-0.499997, 0.333761)
scale = Vector2(-50.3081, 110.907)
mesh = SubResource("BoxMesh_7iehw")
texture = SubResource("GradientTexture2D_clxe0")

[node name="soda_bar" type="ProgressBar" parent="cup"]
offset_left = -18.0
offset_top = -32.0
offset_right = 4.0
offset_bottom = 10.0
scale = Vector2(2, 2)
theme_override_font_sizes/font_size = 15
min_value = 1.0
step = 0.5
value = 1.0
fill_mode = 3
script = ExtResource("2_0fucr")

[node name="water_bar" type="ProgressBar" parent="cup"]
offset_left = -12.0
offset_top = -36.0
offset_right = 10.0
offset_bottom = 6.0
scale = Vector2(2, 2)
theme_override_font_sizes/font_size = 15
min_value = 1.0
step = 0.5
value = 1.0
fill_mode = 3
script = ExtResource("2_0fucr")

[node name="plate for cup" type="Area2D" parent="."]
position = Vector2(398, 412)

[node name="CollisionShape2D" type="CollisionShape2D" parent="plate for cup"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_t8crv")

[node name="plate for cup2" type="Area2D" parent="."]
position = Vector2(553, 415)

[node name="CollisionShape2D" type="CollisionShape2D" parent="plate for cup2"]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_t8crv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Soda" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.376
anchor_top = 0.331
anchor_right = 0.422
anchor_bottom = 0.376
offset_left = -3.05176e-05
offset_top = 0.299973
offset_right = -3.05176e-05
offset_bottom = -0.200012
text = "Soda"
script = ExtResource("2_2xyqp")

[node name="Water" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.523
anchor_top = 0.324
anchor_right = 0.578
anchor_bottom = 0.369
offset_top = 0.199997
offset_bottom = -0.300018
text = "Water"
script = ExtResource("4_p7xw8")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="sodaaa" type="MeshInstance2D" parent="."]
position = Vector2(164, 600)
rotation = 1.5708
scale = Vector2(-103.4, 42.6651)
mesh = SubResource("BoxMesh_0l0m4")
texture = SubResource("GradientTexture2D_8k41s")

[connection signal="mouse_entered" from="cup" to="cup" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="cup" to="cup" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="plate for cup" to="cup" method="_on_plate_for_cup_mouse_entered"]
[connection signal="mouse_entered" from="plate for cup" to="CanvasLayer/Soda" method="_on_plate_for_cup_mouse_entered"]
[connection signal="mouse_entered" from="plate for cup2" to="cup" method="_on_plate_for_cup_2_mouse_entered"]
[connection signal="button_down" from="CanvasLayer/Soda" to="CanvasLayer/Soda" method="_on_button_down"]
[connection signal="button_up" from="CanvasLayer/Soda" to="CanvasLayer/Soda" method="_on_button_up"]
[connection signal="pressed" from="CanvasLayer/Soda" to="cup" method="_on_soda_pressed"]
[connection signal="pressed" from="CanvasLayer/Soda" to="CanvasLayer/Soda" method="_on_pressed"]
[connection signal="button_down" from="CanvasLayer/Water" to="CanvasLayer/Water" method="_on_button_down"]
[connection signal="button_up" from="CanvasLayer/Water" to="CanvasLayer/Water" method="_on_button_up"]
[connection signal="timeout" from="Timer" to="cup" method="_on_timer_timeout"]
